# factorial

./: CMakeLists.txt  README.md  _calc.cpp  _calc.h  fact.cpp  largeint.cpp  largeint.h  main.cpp
